# WROOMRTIC

./: Cargo.toml  README.md  WROOMRTIC.code-workspace
.cargo/: config.toml
dev-notes/: audio-signature-analyzer.md  dual-core-rtic-architecture.md  report-rtic-usages.md
src/: main.rs  mono.rs
